# Chess-Engine

./: CMakeLists.txt  README.md
src/: blog.md  main.cpp
src/initialisation/: init.cpp  init.h
src/misc/: defines.cpp  defines.h  types.h
src/movegen/: move.cpp  move.h  movegen.cpp  movegen.h
src/representation/: board.cpp  board.h  boardstate.cpp  boardstate.h
src/test/: test.cpp  test_movegen.cpp  test_perft.cpp
